--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ REFRESH_TOKEN_SECRET=3c0327d3d2b69d3e55688bc89776edf824d13e496606fd51049629b14fe
 TWILIO_ACCOUNT_SID=AC068934d0601af6f6abab6e000b8becb9
 TWILIO_AUTH_TOKEN=c84cfe827346137ac1d1d23dc12978bd
 TWILIO_PHONE_NUMBER=+1 631 593 0907
+
+EMAIL="nikita.rath51@ethereal.email"
+PASSWORD="3jYhccsECy4DBMfCcT"
+
+REACT_APP_SERVER_DOMAIN = 'http://localhost:5000'
