--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "framer-motion": "^11.3.30",
     "google-auth-library": "^9.14.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "mailgen": "^2.0.28",
     "mongodb-memory-server": "^10.0.0",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
@@ -48,7 +52,8 @@
     "twilio": "^5.2.3",
     "vue-marquee-slider": "^1.0.6",
     "web-vitals": "^2.1.4",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
